--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=spring-auth
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring_auth
+spring.datasource.url=jdbc:postgresql://localhost:5432/esig_teste
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
